<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- GENERAL -->
    <string name="app_name">Tidstager</string>
    <string name="min_sec_devider">:</string>
    <string name="minut">minut</string>
    <string name="minutes">minutter</string>
    <string name="second">sekund</string>
    <string name="seconds">sekunder</string>
    <string name="and_divider">og</string>
    <string name="ok">OK</string>
    <string name="go_back">Gå tilbage</string>
    <string name="launch_from_giraf">Denne app skal startes gennem GIRAF</string>
    
    <!-- PROFILE LIST -->
    <string name="profile_list_header">Profiler</string>
    <string name="predefined">Prædefineret</string>
    <string name="last_used">Sidst Brugt</string>
    <string name="profile_pic_description">Profil Billede</string>
    <string name="profile_list_time">Tid</string>
    <string name="formfactor_timer">Tidstager</string>
    <string name="formfactor_singleimg">Enkelt pictogram</string>
    <string name="formfactor_splitimg">Dobbelt pictogram</string>7
    <string name="formfactor_sound1">Standard biip</string>
    <string name="formfactor_sound2">Ko</string>
    <string name="formfactor_sound3">Cykel horn</string>
    <string name="formfactor_sound4">Cykel horn 2</string>
    <string name="formfactor_sound5">Dråbe</string>
    <string name="formfactor_sound6">Høne</string>

    
    <!-- TEMPLATE LIST -->
    <string name="template_list_header">Gemte Tidstagere</string>
    <string name="are_you_sure">Er du sikker</string>
    <string name="delete_subprofile_message">Vil du slette denne tidstager?</string>
    <string name="delete_description">Er du sikker på du vil slette</string>
    <string name="delete_yes">Ja</string>
    <string name="delete_no">Nej</string>
    
    <!-- CUSTOMIZE -->
    <string name="start_activity_default">Tilpas</string>
    <string name="customize_header">Tilpas</string>
    <string name="customize_header_switch_user">Skift Bruger</string>
    <string name="customize_style_description">Stil</string>
    <string name="customize_hourglass_description">Timeglas</string>
    <string name="customize_timetimer_description">Ur (fuld skive)</string>
    <string name="customize_timetimer_standard_description">Ur (time skive)</string>
    <string name="customize_progressbar_description">Bar</string>
    <string name="customize_digital_description">Digital Ur</string>
    <string name="customize_single_img_description">Et billede</string>
    <string name="customize_split_img_description">To billeder</string>
    <string name="colors">Farver</string>private void setAttachment(Attachment att) {
    int pictureRes = 0;
    int textRes = 0;
    int color = 0x00000000;
    int alpha = 255;
    String attachText = getString(R.string.attached);

    if (att != null) {
    currSubP.setAttachment(att);
    color = att.getColor();
    GETOUT: switch (att.getForm()) {
    case Timer:
    Timer tempT = (Timer) att;
    switch (tempT.formType()) {
    case Hourglass:
    pictureRes = R.drawable.thumbnail_hourglass;
    textRes = R.string.customize_hourglass_description;
    break GETOUT;
    case DigitalClock:
    pictureRes = R.drawable.thumbnail_digital;
    textRes = R.string.customize_digital_description;
    break GETOUT;
    case ProgressBar:
    pictureRes = R.drawable.thumbnail_progressbar;
    textRes = R.string.customize_progressbar_description;
    break GETOUT;
    case TimeTimer:
    pictureRes = R.drawable.thumbnail_timetimer;
    textRes = R.string.customize_timetimer_description;
    break GETOUT;
    case TimeTimerStandard:
    pictureRes = R.drawable.thumbnail_timetimer;
    textRes = R.string.customize_timetimer_standard_description;
    break GETOUT;
    default:
    pictureRes = R.drawable.thumbnail_attachment;
    textRes = R.string.attachment_button_description;
    attachText = "";
    alpha = 0;
    break GETOUT;
    }
    case SingleImg:
    pictureRes = R.drawable.thumbnail_single_pic;
    textRes = R.string.customize_single_img_description;
    alpha = 0;
    break;
    case SplitImg:
    pictureRes = R.drawable.thumbnail_dual_pic;
    textRes = R.string.customize_split_img_description;
    alpha = 0;
    break;
    default:
    pictureRes = R.drawable.thumbnail_attachment;
    textRes = R.string.attachment_button_description;
    attachText = "";
    alpha = 0;
    break;
    }
    } else {
    currSubP.setAttachment(null);
    pictureRes = R.drawable.thumbnail_attachment;
    textRes = R.string.attachment_button_description;
    attachText = "";
    alpha = 0;
    }

    LayerDrawable ld = (LayerDrawable) getResources().getDrawable(R.drawable.attachment_layer);

    PorterDuffColorFilter filter = new PorterDuffColorFilter(color,PorterDuff.Mode.SRC_ATOP);

    Drawable d = getResources().getDrawable(R.drawable.attachment_background);

    d.setAlpha(alpha);

    d.setColorFilter(filter);

    ld.setDrawableByLayerId(R.id.first_attachment_layer, d);

    ld.setDrawableByLayerId(R.id.second_attachment_layer, getResources().getDrawable(pictureRes));

    attachmentButton.setCompoundDrawablesWithIntrinsicBounds(null, getSingleDrawable(ld), null, null);

    attachmentButton.setText(textRes);
    }

    <string name="color_time_left">Tid Tilbage</string>
    <string name="color_picker_button">Vælg Farve</string>
    <string name="attachment_button_description">Vedhæft</string>
    <string name="attachment_dialog_pick_a_timer">Vælg en subprofil</string>
    <string name="attachment_dialog_pick_a_picture">Vælg et pictogram</string>
    <string name="attachment_dialog_split_left">Vælg venstre pictogram</string>
    <string name="attachment_dialog_split_right">Vælg højre pictogram</string>
    <string name="setting_dialog_description">Vælg instillinger herunder</string>
    <string name="sound_dialog_description">Vælg instillinger herunder</string>
    
    <string name="select_attachment_dialog">Vælg Vedhæft</string>
    <string name="attached">Vedhæftet</string>
    <string name="SoundLoaded">Lyden er valgt</string>
    <string name="donescreen_button_description">Slutbillede</string>
    <string name="donescreen_dialog_title">Vælg type af slutbillede</string>
    <string name="donescreen_dialog_left">Vælg venstre slutbilled</string>
    <string name="donescreen_dialog_right">Vælg højre slutbilled</string>
    <string name="donescreen_dialog_single">Vælg et slutbilled</string>
    <string name="choose_profile">Vælg en Profil</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="restart_button">Genstart</string>
    <string name="switch_layout_button">Skift Layout</string>
    <string name="save_button">Gem</string>
    <string name="save_as_button">Gem Som &#8230;</string>
    <string name="setting">Indstillinger</string>
    <string name="profile">Profil</string>
    <string name="gradient">Overgang</string>
    <string name="frame">Ramme</string>
    <string name="background">Baggrund</string>
    <string name="clear">Ryd</string>
    <string name="FullScreen">Fuld Skærm</string>
    <string name="SlutLyd">Slut Lyd</string>
    
    <string name="was_saved_toast">blev gemt på</string>
    <string name="new_template_button_text">Ny tidstager</string>
    <string name="delete_subprofile_toast">Tidstager slettet</string>
    <string name="cannot_delete_subprofile_toast">Kan ikke slette denne tidstager</string>
    <string name="cant_save">Tidstagen kan ikke gemmes endnu!</string>
    <string name="cant_start">Tidstagen kan ikke startes endnu!</string>
    <string name="cant_stop">Tidstagen er ikke startet endnu!</string>
    <string name="cancel">Afbryd</string>
    <string name="close">Luk</string>

    <!-- Attachment feedback strings. -->
    <string name="attached_pictogram_toast">Pictogram vedhæftet</string>
    <string name="attached_pictograms_toast">Pictogrammer vedhæftet</string>
    <string name="attached_timer_toast">Tidstager vedhæftet</string>

</resources>